Showing users rights of iFolders accordingly in webadmin->ifolders tab
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7153 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/admin/iFolderAdmin.resx
+++ b/src/admin/iFolderAdmin.resx
@@ -60,6 +60,9 @@
 	<data name="ADMIN">
 		<value>Admin</value>
 	</data>
+	<data name="FULLCONTROL">
+		<value>Full Control</value>
+	</data>
 	<data name="ADMINISTRATOR">
 		<value>Administrator</value>
 	</data>
